--- a/Web/HTML/Assignment1/html1_1.html
+++ b/Web/HTML/Assignment1/html1_1.html
@@ -146,7 +146,7 @@
 				<td><input type = "file"/></td>
 			</tr>
 			<tr>
-				<td style = "text-align : right;">Post Graduation:</td>
+				<td></td>
 				<td>Supported formats: doc, docx, rtf</td>
 			</tr>
 		</table>
@@ -163,7 +163,7 @@
 			</tr>
 			<tr>
 				<td><input type = "checkbox"/>Naukri Fast Forward Calls/SMS</td>
-				<td><input type = "checkbox"/>Other Promotions/SpecialOffers</td>
+				<td><input type = "checkbox"/>Other Promotions/Special Offers</td>
 			</tr>
 		</table>
 		<br/><hr/><br/>
