--- a/Web/HTML/Assignment2/Question1/Layout3.html
+++ b/Web/HTML/Assignment2/Question1/Layout3.html
@@ -62,7 +62,7 @@
   					<li><a href="#">September 2008</a></li>
   				<li><a href="#">June 2008</a></li>
   			</ul>
-		</aside>
+		</aside><br/><br/>
   		<footer>
   			<a href="#">Link1</a> | <a href="#">Link2</a> | <a href="#">Link3</a>
   			<br/>Copyright &copy 2011. All Rights Reserved.
