--- a/Web/HTML/Assignment1/html1_1.html
+++ b/Web/HTML/Assignment1/html1_1.html
@@ -6,168 +6,215 @@
 		<b>Create Your Account</b><br/><br/>
 		<table>
 			<tr>
-				<td style = "text-align : right;">* Email ID:</td>
-				<td><input type = "text" style = "width : 300px; height : 30px;"/></td>
-			</tr>
-			<tr>
-				<td style = "text-align : right;">* Password:</td>
-				<td><input type = "password" style = "width : 300px; height : 30px;"/></td>
-			</tr>
-			<tr>
-				<td style = "text-align : right;">* Confirm Password:</td>
-				<td><input type = "password" style = "width : 300px; height : 30px;"/></td>
-			</tr>
-		</table>
-		<br/><hr/><br/>
-		<b>Contact Details</b> This is where recruiters and employers will contact you for jobs<br/><br/>
-		<table>
-			<tr>
-				<td style = "text-align : right;">Your Name:</td>
-				<td><input type = "text" style = "width : 300px; height : 30px;"/></td>
-				<td></td>
-			</tr>
-			<tr>
-				<td style = "text-align : right;">* Current Location:</td>
 				<td>
-					<select style = "width : 300px; height : 30px;">
-						<option>Select</option>
-						<option>Udaipur</option>
-						<option>Kota</option>
-						<option>Jaipur</option>
-					</select>
-				</td>
-				<td><input type = "checkbox"/>Not from India</td>
-			</tr>
-			<tr>
-				<td style = "text-align : right;">* Mobile:</td>
-				<td><input type = "text" style = "width : 300px; height : 30px;"/></td>
-			</tr>
-			<tr><td></td><td>If you do not have a mobile, enter <a href = "pg1.html">Landline no</a></td><td></td></tr>
-		</table>
-		<br/><hr/><br/>
-		<b>Current Professional Details</b><br/><br/>
-		<table>
-			<tr>
-				<td style = "text-align : right;">* Total Experience:</td>
-				<td>
-					<select style = "height : 30px;">
-						<option>Select</option>
-						<option>Udaipur</option>
-						<option>Kota</option>
-						<option>Jaipur</option>
-					</select>
-					Years
-					<select style = "height : 30px;">
-						<option>Select</option>
-						<option>Udaipur</option>
-						<option>Kota</option>
-						<option>Jaipur</option>
-					</select>
-					Months
+					<table>
+						<tr>
+							<td style = "text-align : right;"><span style = "color:red;">*</span> Email ID:</td>
+							<td><input type = "text" style = "width : 300px; height : 30px;"/></td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;"><span style = "color:red;">*</span> Password:</td>
+							<td><input type = "password" style = "width : 300px; height : 30px;"/></td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;"><span style = "color:red;">*</span> Confirm Password:</td>
+							<td><input type = "password" style = "width : 300px; height : 30px;"/></td>
+						</tr>
+					</table>
 				</td>
 			</tr>
 			<tr>
-				<td style = "text-align : right;">* Current Industry:</td>
 				<td>
-					<select style = "width : 440px; height : 30px;">
-						<option>Select</option>
-						<option>Udaipur</option>
-						<option>Kota</option>
-						<option>Jaipur</option>
-					</select>
+					<br/><hr/><br/>
+					<b>Contact Details</b> This is where recruiters and employers will contact you for jobs<br/><br/>
 				</td>
 			</tr>
 			<tr>
-				<td style = "text-align : right;">* Functional Area:</td>
 				<td>
-					<select style = "width : 440px; height : 30px;">
-						<option>Select</option>
-						<option>Udaipur</option>
-						<option>Kota</option>
-						<option>Jaipur</option>
-					</select>
+					<table>
+						<tr>
+							<td style = "text-align : right;">Your Name:</td>
+							<td><input type = "text" style = "width : 300px; height : 30px;"/></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;"><span style = "color:red;">*</span> Current Location:</td>
+							<td>
+								<select style = "width : 300px; height : 30px;">
+									<option>Select</option>
+									<option>Udaipur</option>
+									<option>Kota</option>
+									<option>Jaipur</option>
+								</select>
+							</td>
+							<td><input type = "checkbox"/>Not from India</td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;"><span style = "color:red;">*</span> Mobile:</td>
+							<td><input type = "text" style = "width : 300px; height : 30px;"/></td>
+						</tr>
+						<tr><td></td><td>If you do not have a mobile, enter <a href = "pg1.html">Landline no</a></td><td></td></tr>
+					</table>
 				</td>
 			</tr>
 			<tr>
-				<td></td>
-				<td><a href = "pg1.html">What is my functional area and industry?</a></td>
+				<td><br/><hr/><br/><b>Current Professional Details</b><br/><br/></td>
 			</tr>
 			<tr>
-				<td style = "text-align : right;">* Key Skills:</td>
-				<td><textarea rows="4" cols="60" placeholder = "Please enter your areas of expertise/specialization"></textarea></td>
-			</tr>
-			<tr>
-				<td style = "text-align : right;">* Resume Headline:</td>
-				<td><input type = "text" style = "width : 440px; height : 30px;" placeholder = "Describe your professional background in one line"/></td>
-			</tr>
-		</table>
-		<br/><hr/><br/>
-		<b>Education Details</b> Please list your areas of study<br/><br/>
-		<table>
-			<tr>
-				<td style = "text-align : right;">Basic Graduation:</td>
 				<td>
-					<select style = "width : 300px; height : 30px;">
-						<option>Select</option>
-						<option>Udaipur</option>
-						<option>Kota</option>
-						<option>Jaipur</option>
-					</select>
+					<table>
+						<tr>
+							<td style = "text-align : right;"><span style = "color:red;">*</span> Total Experience:</td>
+							<td>
+								<select style = "height : 30px;">
+									<option>Select</option>
+									<option>one</option>
+									<option>two</option>
+									<option>three</option>
+								</select>
+								Years
+								<select style = "height : 30px;">
+									<option>Select</option>
+									<option>one</option>
+									<option>two</option>
+									<option>three</option>
+								</select>
+								Months
+							</td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;"><span style = "color:red;">*</span> Current Industry:</td>
+							<td>
+								<select style = "width : 440px; height : 30px;">
+									<option>Select</option>
+									<option>Industry 1</option>
+									<option>Industry 2</option>
+									<option>Industry 3</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;"><span style = "color:red;">*</span> Functional Area:</td>
+							<td>
+								<select style = "width : 440px; height : 30px;">
+									<option>Select</option>
+									<option>Area 1</option>
+									<option>Area 2</option>
+									<option>Area 3</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<td></td>
+							<td><a href = "pg1.html">What is my functional area and industry?</a></td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;"><span style = "color:red;">*</span> Key Skills:</td>
+							<td><textarea rows="4" cols="60" placeholder = "Please enter your areas of expertise/specialization"></textarea></td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;"><span style = "color:red;">*</span> Resume Headline:</td>
+							<td><input type = "text" style = "width : 440px; height : 30px;" placeholder = "Describe your professional background in one line"/></td>
+						</tr>
+					</table>
 				</td>
 			</tr>
 			<tr>
-				<td style = "text-align : right;">Post Graduation:</td>
 				<td>
-					<select style = "width : 300px; height : 30px;">
-						<option>Select</option>
-						<option>Udaipur</option>
-						<option>Kota</option>
-						<option>Jaipur</option>
-					</select>
+					<br/><hr/><br/><b>Education Details</b> Please list your areas of study<br/><br/>
 				</td>
 			</tr>
 			<tr>
-				<td style = "text-align : right;">Doctorate/Phd:</td>
 				<td>
-					<select style = "width : 300px; height : 30px;">
-						<option>Select</option>
-						<option>Udaipur</option>
-						<option>Kota</option>
-						<option>Jaipur</option>
-					</select>
+					<table>
+						<tr>
+							<td style = "text-align : right;"><span style = "color:red;">*</span>Basic Graduation:</td>
+							<td>
+								<select style = "width : 300px; height : 30px;">
+									<option>Select Basic Graduation</option>
+									<option>Basic Graduation 1</option>
+									<option>Basic Graduation 2</option>
+									<option>Basic Graduation 3</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;">Post Graduation:</td>
+							<td>
+								<select style = "width : 300px; height : 30px;">
+									<option>Select Post Graduation</option>
+									<option>Post Graduation 1</option>
+									<option>Post Graduation 2</option>
+									<option>Post Graduation 3</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;">Doctorate/Phd:</td>
+							<td>
+								<select style = "width : 300px; height : 30px;">
+									<option>Select</option>
+									<option>Phd1</option>
+									<option>Phd2</option>
+									<option>Phd3</option>
+								</select>
+							</td>
+						</tr>
+					</table>
 				</td>
 			</tr>
-		</table>
-		<br/><hr/><br/>
-		<b>Upload Resume</b> Please upload a detailed resume<br/><br/>
-		<table>
 			<tr>
-				<td style = "text-align : right;">Attach Resume:</td>
-				<td><input type = "file"/></td>
+				<td>
+					<br/><hr/><br/><b>Upload Resume</b> Please upload a detailed resume<br/><br/>
+				</td>
 			</tr>
 			<tr>
-				<td style = "text-align : right;">Post Graduation:</td>
-				<td>Supported formats: doc, docx, rtf</td>
-			</tr>
-		</table>
-		<br/><hr/><br/>
-		<b>Mailer and Privacy Settings</b><br/><br/>
-		<table>
-			<tr>
-				<td><input type = "checkbox"/>Job Alerts</td>
-				<td><input type = "checkbox"/>Important Notifications</td>
-			</tr>
-			<tr>
-				<td><input type = "checkbox"/>Naukri Fast Forward Emails</td>
-				<td><input type = "checkbox"/>Communication From Clients (Voice/Calls/SMS)</td>
+				<td>
+					<table>
+						<tr>
+							<td style = "text-align : right;">Attach Resume:</td>
+							<td><input type = "file"/></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td><div style="overflow : scroll; overflow-x:hidden; overflow-y: scroll; width:200px; height:30px;">Supported formats: doc, docx, rtf</div></td>
+						</tr>
+					</table>
+				</td>
 			</tr>
 			<tr>
-				<td><input type = "checkbox"/>Naukri Fast Forward Calls/SMS</td>
-				<td><input type = "checkbox"/>Other Promotions/SpecialOffers</td>
+				<td>
+					<br/><hr/><br/><b>Mailer and Privacy Settings</b><br/><br/>
+				</td>
 			</tr>
-		</table>
-		<br/><hr/><br/>
-		<input type = "checkbox"/>I have read and understood and agree to the <a>Terms and Conditions</a> governing the use
-		<br/><br/><input type = "submit" value = "Create my Account" style = "width : 300px; height : 50px;">
+			<tr>
+				<td>
+					<table>
+						<tr>
+							<td><input type = "checkbox"/>Job Alerts</td>
+							<td><input type = "checkbox" checked/>Important Notifications</td>
+						</tr>
+						<tr>
+							<td><input type = "checkbox"/>Naukri Fast Forward Emails</td>
+							<td><input type = "checkbox" checked/>Communication From Clients (Voice/Calls/SMS)</td>
+						</tr>
+						<tr>
+							<td><input type = "checkbox"/>Naukri Fast Forward Calls/SMS</td>
+							<td><input type = "checkbox" checked/>Other Promotions/Special Offers</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<br/><hr/><br/><input type = "checkbox" checked/>I have read and understood and agree to the <a>Terms and Conditions</a> governing the use
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<br/><br/><input type = "submit" value = "Create my Account" style = "font-size:15px; font-weight:bold; width : 300px; margin-left:150px; height : 50px;">
+				</td>
+			</tr>
+			</table>
 	</body>
 </html>
