--- a/Web/HTML/Assignment1/html1_2.html
+++ b/Web/HTML/Assignment1/html1_2.html
@@ -6,120 +6,144 @@
 		<br/><h3>Metagurukul Account registration</h3><hr/><br/>
 		<table>
 			<tr>
-				<td style = "text-align : right;">Name:</td>
 				<td>
-					<input type = "text" style = "width : 300px; height : 30px;" placeholder = "First Name"/>
-					<input type = "text" style = "width : 300px; height : 30px;" placeholder = "Last Name"/>
+					<table>
+						<tr>
+							<td style = "text-align : right;">Name:</td>
+							<td>
+								<input type = "text" style = "width : 300px; height : 30px;" placeholder = "First Name"/>
+								<input type = "text" style = "width : 300px; height : 30px;" placeholder = "Last Name"/>
+							</td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;">Gender:</td>
+							<td>
+								<select style = "width : 300px; height : 30px;">
+									<option>- Select One -</option>
+									<option>Female</option>
+									<option>Male</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;">Birthday:</td>
+							<td>
+								<select style = "width : 300px; height : 30px;">
+									<option>- Select Month -</option>
+									<option>January</option>
+									<option>February</option>
+									<option>March</option>
+									<option>April</option>
+									<option>May</option>
+									<option>June</option>
+									<option>July</option>
+									<option>August</option>
+									<option>September</option>
+									<option>October</option>
+									<option>November</option>
+									<option>December</option>
+								</select>
+								<input type = "text" style = "width : 300px; height : 30px;" placeholder = "Day"/>
+								<input type = "text" style = "width : 300px; height : 30px;" placeholder = "Year"/>
+							</td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;">Country:</td>
+							<td>
+								<select style = "width : 300px; height : 30px;">
+									<option>- Select Country -</option>
+									<option>India</option>
+									<option>China</option>
+									<option>Japan</option>
+								</select>
+							</td>
+						</tr>
+					</table>
 				</td>
 			</tr>
 			<tr>
-				<td style = "text-align : right;">Gender:</td>
 				<td>
-					<select style = "width : 300px; height : 30px;">
-						<option>- Select One -</option>
-						<option>Female</option>
-						<option>Male</option>
-					</select>
+					<br/><h3>Select an ID and password</h3><hr/><br/>
 				</td>
 			</tr>
 			<tr>
-				<td style = "text-align : right;">Birthday:</td>
 				<td>
-					<select style = "width : 300px; height : 30px;">
-						<option>- Select Month -</option>
-						<option>January</option>
-						<option>February</option>
-						<option>March</option>
-						<option>April</option>
-						<option>May</option>
-						<option>June</option>
-						<option>July</option>
-						<option>August</option>
-						<option>September</option>
-						<option>October</option>
-						<option>November</option>
-						<option>December</option>
-					</select>
-					<input type = "text" style = "width : 300px; height : 30px;" placeholder = "Day"/>
-					<input type = "text" style = "width : 300px; height : 30px;" placeholder = "Year"/>
+					<table>
+						<tr>
+							<td style = "text-align : right;">Metagurukul ID:</td>
+							<td>
+								<input type = "text" style = "width : 300px; height : 30px;" placeholder = "First Name"/>
+								@
+								<select style = "width : 300px; height : 30px;">
+									<option>metagurukul.com</option>
+									<option>metagurukul11.com</option>
+									<option>metagurukul22.com</option>
+								</select>
+								<input type = "submit" value = "Check" style = "height : 30px;">
+							</td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;">Password:</td>
+							<td><input type = "text" style = "width : 300px; height : 30px;"/></td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;">Re-type Password:</td>
+							<td><input type = "text" style = "width : 300px; height : 30px;"/></td>
+						</tr>
+					</table>
 				</td>
 			</tr>
 			<tr>
-				<td style = "text-align : right;">Country:</td>
 				<td>
-					<select style = "width : 300px; height : 30px;">
-						<option>- Select Country -</option>
-						<option>India</option>
-						<option>China</option>
-						<option>Japan</option>
-					</select>
+					<br/><br/><b>Select an ID and password</b><br/><hr/><br/>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<table>
+						<tr>
+							<td style = "text-align : right;">Alternate Email (optional):</td>
+							<td><input type = "password" style = "width : 300px; height : 30px;"/></td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;">Secret Question 1:</td>
+							<td>
+								<select style = "width : 300px; height : 30px;">
+									<option>- Select One -</option>
+									<option>Question 1</option>
+									<option>Question 2</option>
+									<option>Question 3</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<td>Your Answer</td>
+							<td><input type = "text" style = "width : 300px; height : 30px;"/></td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;">Secret Question 2:</td>
+							<td>
+								<select style = "width : 300px; height : 30px;">
+									<option>- Select One -</option>
+									<option>Question 1</option>
+									<option>Question 2</option>
+									<option>Question 3</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<td style = "text-align : right;">Your Answer</td>
+							<td><input type = "text" style = "width : 300px; height : 30px;"/></td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<br/><hr/><br/><br/><br/><input type = "submit" value = "Create my Account" style = "font-size:15px; font-weight:bold; width : 300px; margin-left:150px; height : 50px;">
 				</td>
 			</tr>
 		</table>
-		<br/><h3>Select an ID and password</h3><hr/><br/>
-		<table>
-			<tr>
-				<td style = "text-align : right;">Metagurukul ID:</td>
-				<td>
-					<input type = "text" style = "width : 300px; height : 30px;" placeholder = "First Name"/>
-					@
-					<select style = "width : 300px; height : 30px;">
-						<option>metagurukul.com</option>
-						<option>metagurukul11.com</option>
-						<option>metagurukul22.com</option>
-					</select>
-					<input type = "submit" value = "Check" style = "height : 30px;">
-				</td>
-			</tr>
-			<tr>
-				<td style = "text-align : right;">Password:</td>
-				<td><input type = "text" style = "width : 300px; height : 30px;"/></td>
-			</tr>
-			<tr>
-				<td style = "text-align : right;">Re-type Password:</td>
-				<td><input type = "text" style = "width : 300px; height : 30px;"/></td>
-			</tr>
-		</table>
-		<br/><br/>
-		<b>Select an ID and password</b><br/><hr/><br/>
-		<table>
-			<tr>
-				<td style = "text-align : right;">Alternate Email (optional):</td>
-				<td><input type = "password" style = "width : 300px; height : 30px;"/></td>
-			</tr>
-			<tr>
-				<td style = "text-align : right;">Secret Question 1:</td>
-				<td>
-					<select style = "width : 300px; height : 30px;">
-						<option>- Select One -</option>
-						<option>Question 1</option>
-						<option>Question 2</option>
-						<option>Question 3</option>
-					</select>
-				</td>
-			</tr>
-			<tr>
-				<td>Your Answer</td>
-				<td><input type = "text" style = "width : 300px; height : 30px;"/></td>
-			</tr>
-			<tr>
-				<td style = "text-align : right;">Secret Question 2:</td>
-				<td>
-					<select style = "width : 300px; height : 30px;">
-						<option>- Select One -</option>
-						<option>Question 1</option>
-						<option>Question 2</option>
-						<option>Question 3</option>
-					</select>
-				</td>
-			</tr>
-			<tr>
-				<td style = "text-align : right;">Your Answer</td>
-				<td><input type = "text" style = "width : 300px; height : 30px;"/></td>
-			</tr>
-		</table>
-		<br/><hr/><br/>
-		<br/><br/><input type = "submit" value = "Create my Account" style = "width : 300px; height : 50px;margin-left:200px;">
 		<br/><br/>
 	</body>
 </html>
